# sample-host-hermesagent-on-amazon-bedrock-agentcore

./: .gitignore  README.md  README_ZH.md  app.py  cdk.json  package.json  requirements.txt
.claude/: settings.json
agentcore/: agentcore.json  aws-targets.json
app/hermes/: Dockerfile  entrypoint.sh  main.py  pyproject.toml
app/hermes/bridge/: __init__.py  bedrock_provider.py  contract.py  warmup_agent.py  workspace_sync.py
bridge/: Dockerfile  bedrock_provider.py  contract.py  entrypoint.sh  scoped_credentials.py
docs/: AGENTCORE_CONTRACT.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  DEPLOYMENT_GUIDE.md  DISCORD_SETUP.md  ECS_GATEWAY_DESIGN.md  FEISHU_SETUP.md  INVOKE_GUIDE.md  MIGRATION_PLAN.md  WECHAT_FEISHU_SETUP.md
gateway/: Dockerfile  agentcore_proxy.py  healthcheck.py  main.py  weixin_file_patch.py
lambda/cron/: index.py
lambda/router/: index.py
lambda/token_metrics/: index.py
scripts/: deploy.sh  setup_feishu.sh  setup_slack.sh  setup_telegram.sh  teardown.sh
stacks/: __init__.py  agentcore_stack.py  cron_stack.py  gateway_stack.py  guardrails_stack.py  observability_stack.py  router_stack.py  security_stack.py  token_monitoring_stack.py  vpc_stack.py
tests/: test_contract.py  test_router.py  test_workspace_sync.py
