[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-agentcore"
version = "0.1.0"
description = "Hermes Agent on Amazon Bedrock AgentCore"
requires-python = ">=3.10"
dependencies = [
    "bedrock-agentcore >= 1.0.3",
    "boto3 >= 1.35.0",
    "botocore >= 1.35.0",
    "litellm >= 1.40.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
